# lehel

./: CommandLineMain.lhs  Lehel.cabal
Lehel/Core/: Actions.lhs  Eval.lhs  Frontend.lhs  InputFilters.lhs  REPL.lhs  State.lhs  VFS.lhs
Lehel/Core/FileSystems/: RealFileSystem.lhs
