Name:		Lehel
Version:	0.1
Cabal-Version:	>= 1.6
Author:		Daniel Vigovszky <daniel.vigovszky@gmail.com>
Maintainer:	Daniel Vigovszky <daniel.vigovszky@gmail.com>
Category:	File Management
Synopsys:	Extensible file manager and scripting framework
Description:	Extensible dual panel file manager and scripting framework with multiple frontends.
Stability:	Experimental
License:	GPL
Build-Type:	Simple

Executable lehel-cmd
    Main-Is: CommandLineMain.lhs
    Build-Depends:	
        base,
        plugins,
        readline

		
