Name:		Lehel
Version:	0.1
Cabal-Version:	>= 1.6
Author:		Daniel Vigovszky <daniel.vigovszky@gmail.com>
Maintainer:	Daniel Vigovszky <daniel.vigovszky@gmail.com>
Category:	File Management
Synopsis:	Extensible file manager and scripting framework
Description:	Extensible dual panel file manager and scripting framework with multiple frontends.
Stability:	Experimental
License:	GPL
Build-Type:	Simple

Library
    Exposed-modules: 
        Lehel.Core.Actions
        Lehel.Core.Eval
        Lehel.Core.Frontend
        Lehel.Core.REPL
        Lehel.Core.State
        Lehel.Core.VFS
        Lehel.Core.FileSystems.RealFileSystem
    Other-modules:
        Paths_Lehel
    Build-Depends:
        base >= 4.0,
        filepath,
        plugins,
        readline,
        directory,
        random,
        mtl

Executable lehel-cmd
    Main-Is: CommandLineMain.lhs
    Build-Depends:
        base
    ghc-options -Wall -O2 -dynamic
